[workspace]
members = ["benchmark", "core", "translate"]
resolver = "3"

[workspace.dependencies]
clap = { version = "4.5.45", features = ["derive"] }
harvest_core = { path = "core" }
harvest_translate = { path = "translate" }
log = "0.4.28"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tempfile = "3.23.0"
thiserror = "2.0.17"

[workspace.lints.clippy]
self_named_module_files = "warn"
