[package]
name = "harvest-benchmark"
version = "0.1.0"
edition = "2021"
description = "Runs a set of benchmarks and provides useful output"
license = "MIT"

[[bin]]
name = "benchmark"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
csv = "1.3"
full_source = { version = "0.1.0", path = "../tools/full_source" }
harvest_core = { workspace = true }
harvest_translate = { workspace = true }
log = { workspace = true }
regex = "1.12.2"
serde = { workspace = true }
serde_json = { workspace = true }
try_cargo_build = { version = "0.1.0", path = "../tools/try_cargo_build" }
wait-timeout = "0.2"
walkdir = "2.0"
