[package]
name = "harvest_core"
version = "0.1.0"
edition = "2024"

[dependencies]
serde_json.workspace = true
thiserror = { workspace = true }
tracing-subscriber = { features = ["env-filter"], version = "0.3.22" }
tracing.workspace = true
tempfile = { workspace = true }
serde = { workspace = true, features = ["derive"] }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
