[package]
name = "harvest_translate"
version = "0.1.0"
edition = "2024"

[lib]
name = "harvest_translate"
path = "src/lib.rs"

[[bin]]
name = "translate"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
config = { default-features = false, features = ["toml"], version = "0.15.18" }
directories = "6.0.0"
harvest_core = { workspace = true }
libc = "0.2.177"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { default-features = false, features = ["std"], version = "0.1.43" }
load_raw_source = { version = "0.1.0", path = "../tools/load_raw_source" }
identify_project_kind = { version = "0.1.0", path = "../tools/identify_project_kind" }
try_cargo_build = { version = "0.1.0", path = "../tools/try_cargo_build" }
raw_source_to_cargo_llm = { version = "0.1.0", path = "../tools/raw_source_to_cargo_llm" }

[lints]
workspace = true
